feat(Backend): Put Bulk and Single
